Update from September 23, 2023

--- a/old/70766-h/70766-h.htm
+++ b/old/70766-h/70766-h.htm
@@ -186,7 +186,6 @@ country where you are located before using this eBook.
 <p style='display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em'>Title: A daughter of the Samurai</p>
 <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em'>Author: Etsu Inagaki Sugimoto</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Release Date: May 15, 2023 [eBook #70766]</p>
-<p style='display:block; text-indent:0; margin:1em 0'>Most Recently Updated: September 23, 2023</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Language: English</p>
   <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em; text-align:left'>Produced by: Emmanuel Ackerman, Graeme Mackreth and the Online Distributed Proofreading Team at https://www.pgdp.net (This book was produced from images made available by the HathiTrust Digital Library.)</p>
 <div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK A DAUGHTER OF THE SAMURAI ***</div>
@@ -3613,7 +3612,7 @@ jinrikisha to roll up to his side.</p>
 
 <p><span class="pagenum"><a name="Page_101" id="Page_101">[Pg 101]</a></span></p>
 
-<p>"Etsu-bo," he asked, "when did they give up making a priestess of you?"</p>
+<p>"Etsu-bo," he asked, "when did they up making a priestess of you?"</p>
 
 <p>"Why&mdash;I don't know," I said, surprised.</p>
 
